Created HTML layout for landing page

--- a/index.html
+++ b/index.html
@@ -6,5 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Minimalism ♡</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Minimalism Lifestyle</h1>
+    <h2>What is Minimalism?</h2>
+    <img
+      src="https://cdn-images-1.medium.com/max/2600/1*n6ZgCIOLBrSiarUv6b8ENw.jpeg"
+      alt="minimalism-furniture"
+      width="400"
+    />
+    <p>Minimalism is a tool that can assist you in finding freedom from :</p>
+    <ul>
+      <li>fear</li>
+      <li>worry</li>
+      <li>overwhelm</li>
+      <li>guilt</li>
+      <li>depression</li>
+      <li>trappings of the consumer culture we've built our lives around</li>
+    </ul>
+    <h2>
+      Checkout these pages, if interested in
+      <small>minimalizing your life</small>
+      <ul>
+        <li>
+          ♡
+          <a href="https://www.theminimalists.com/minimalism/" target="_blank"
+            >the minimalists</a
+          >
+        </li>
+        <li>
+          ♡
+          <a
+            href="https://www.becomingminimalist.com/what-is-minimalism/"
+            target="_blank"
+            >becoming minimalists</a
+          >
+        </li>
+      </ul>
+    </h2>
+    <button>Let's Start Minimalizing</button>
+    <p>This page was coded by <a href="#">J.Ayala</a></p>
+  </body>
 </html>
