Edited & Added 2 links to minimalism

--- a/index.html
+++ b/index.html
@@ -120,9 +120,18 @@
       </ul>
       <h2>
         Checkout these pages, if interested in
+        <br />
         <em>minimalizing your life</em>
       </h2>
       <ul>
+        <li>
+          <a
+            href="https://mnmlist.com/minimalist-faqs/"
+            target="_blank"
+            class="learn-more"
+            >♡ minimalist FAQs</a
+          >
+        </li>
         <li>
           <a
             href="https://www.theminimalists.com/minimalism/"
@@ -137,6 +146,14 @@
             target="_blank"
             class="learn-more"
             >♡ becoming minimalists</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://exilelifestyle.com/minimalism-explained/"
+            target="_blank"
+            class="learn-more"
+            >♡ minimalists explained</a
           >
         </li>
       </ul>
