--- a/index.html
+++ b/index.html
@@ -157,8 +157,20 @@
           >
         </li>
       </ul>
-      <button>Let's Start Minimalizing</button>
+      <button class="start-button">Let's Start Minimalizing</button>
       <p class="footer">This page was coded by J.Ayala</p>
     </div>
+    <script>
+      function WelcomeUser() {
+        let name = prompt("What is your name?");
+        let email = prompt("What is your email?");
+        let emoji = prompt("What is your favorite emoji?");
+
+        alert("Thank you " + name + "! Wel'll be in touch by email " + emoji);
+      }
+
+      let startButton = document.querySelector(".start-button");
+      startButton.addEventListener("click", WelcomeUser);
+    </script>
   </body>
 </html>
