Edited HTML + CSS

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <title>Minimalism ♡</title>
     <style>
       body {
-        background: #949d9d;
+        background: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
       }
 
       h1,
       h2 {
-        color: #cbd6d6;
+        color: #90bda8;
         font-family: Lato, sans-serif;
         text-align: center;
       }
@@ -22,22 +22,22 @@
       }
 
       h2 {
-        border: 2px solid #cbd6d6;
+        border: 2px solid #90bda8;
         border-radius: 4px;
         font-size: 18px;
         padding: 15px;
       }
 
       em {
-        font-weight: lighter;
         font-size: 14px;
+        font-weight: lighter;
       }
 
       img {
+        border-radius: 8px;
         display: block;
         margin: 0 auto;
         max-width: 100%;
-        border-radius: 8px;
       }
 
       p {
@@ -51,63 +51,70 @@
       }
 
       li {
-        max-width: 400px;
-        margin: 0 auto;
+        font-size: 15px;
         list-style-type: none;
+        margin: 0 auto;
+        max-width: 400px;
       }
 
       button {
-        display: block;
-        margin: 20px auto;
-        background: ##fdfa71;
-        color: :black;
-        font-size: 18px;
-        padding: 15px 20px;
+        background: #f0ece2;
         border: none;
         border-radius: 6px;
-        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+        color: black;
+        display: block;
+        font-size: 18px;
+        margin: 20px auto;
+        padding: 15px 20px;
         transition: all 200ms ease-in-out;
       }
 
       button:hover {
-        opacity: 0.9;
+        color: #90bda8;
         cursor: pointer;
+        opacity: 0.9;
       }
 
       .container {
-        max-width: 600px;
-        margin: 0 auto;
         padding: 30px 60px;
+        margin: 0 auto;
+        max-width: 600px;
       }
 
       .learn-more {
-        color: #cbd6d6;
-        text-decoration: none;
+        color: #90bda8;
         transition: all 230ms ease-in-out;
+        text-decoration: none;
       }
 
       .learn-more:hover {
         color: black;
+        font-size: 17px;
       }
 
       .footer {
-        text-align: center;
-        color: #cbd6d6;
+        color: #90bda8;
         font-family: Lato, sans-serif;
+        font-size: 12px;
+        opacity: 0.7;
+        text-align: center;
         text-decoration: none;
       }
     </style>
   </head>
   <body>
     <div class="container">
-      <h1>Minimalism Lifestyle</h1>
+      <h1>minimalism Lifestyle</h1>
       <h2>What is Minimalism?</h2>
       <img
         src="https://cdn-images-1.medium.com/max/2600/1*n6ZgCIOLBrSiarUv6b8ENw.jpeg"
         alt="minimalism-furniture"
-        width="400"
       />
-      <p>Minimalism is a tool that can assist you in finding freedom from :</p>
+      <p>
+        <strong>Minimalism</strong> is a tool that can assist you in finding
+        freedom from:
+      </p>
       <ul>
         <li>→ fear</li>
         <li>→ worry</li>
@@ -124,14 +131,6 @@
         <em>minimalizing your life</em>
       </h2>
       <ul>
-        <li>
-          <a
-            href="https://mnmlist.com/minimalist-faqs/"
-            target="_blank"
-            class="learn-more"
-            >♡ minimalist FAQs</a
-          >
-        </li>
         <li>
           <a
             href="https://www.theminimalists.com/minimalism/"
@@ -154,6 +153,14 @@
             target="_blank"
             class="learn-more"
             >♡ minimalists explained</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://mnmlist.com/minimalist-faqs/"
+            target="_blank"
+            class="learn-more"
+            >♡ minimalist FAQs</a
           >
         </li>
       </ul>
